@startuml
!include _tema.puml
title UniEvent - Eventos, participações, certificados e notificações
left to right direction

entity "Aluno" as Aluno {
  * Id : int <<PK>>
  --
  * Email : string <<UQ>>
  * TipoParticipante : string
}

entity "ResponsavelEvento" as Responsavel {
  * Id : int <<PK>>
  --
  * Nome : string
  InstituicaoId : int <<FK>>
}

entity "Evento" as Evento {
  * Id : int <<PK>>
  --
  * ResponsavelEventoId : int <<FK>>
  InstituicaoId : int <<FK>>
  * Nome : string
  * Descricao : string
  Local : string
  * Categoria : string
  * DataEvento : datetime2
  * Capacidade : int
  * Thumbnail : nvarchar(max)
  * Visibilidade : string
  * PublicoPermitido : string
  InicioInscricoes : datetime2
  FimInscricoes : datetime2
  Latitude : float
  Longitude : float
  * RaioCheckInMetros : int
  * ToleranciaCheckInMinutos : int
}

entity "Participacao" as Participacao {
  * Id : int <<PK>>
  --
  * AlunoId : int <<FK, UQ composto>>
  * EventoId : int <<FK, UQ composto>>
  * CodigoIngresso : string <<UQ>>
  * StatusInscricao : string
  DataCancelamento : datetime2
  * PresencaConfirmada : bit
  DataConfirmacao : datetime2
  DistanciaCheckInMetros : float
  PrecisaoLocalizacaoMetros : float
  OperadorCheckInId : int
  * CertificadoEmitido : bit
  CodigoValidacao : string
  CertificadoPdf : varbinary(max)
  NomeArquivoCertificado : nvarchar(180)
  DataGeracaoCertificado : datetime2
  * CertificadoEnviadoPorEmail : bit
  StatusEnvioCertificado : nvarchar(30)
  DataEnvioCertificadoEmail : datetime2
  ErroEnvioCertificadoEmail : nvarchar(500)
  ProcessamentoCertificadoId : uniqueidentifier
  ProcessamentoCertificadoAteUtc : datetime2
  ProximaTentativaCertificadoUtc : datetime2
  * TentativasEnvioCertificado : int
}

entity "Certificado" as Certificado {
  * Id : int <<PK>>
  --
  * EventoId : int <<FK>>
  * DataCertifcado : datetime2
  * Texto : nvarchar(max)
}

entity "PreferenciaNotificacao" as Preferencia {
  * Id : int <<PK>>
  --
  * AlunoId : int <<FK, UQ>>
  * LembretesEventos : bit
  * AlertasCertificados : bit
  * Recomendacoes : bit
  * UsarLocalizacao : bit
  Categorias : string
  LatitudeAproximada : float
  LongitudeAproximada : float
  * RaioKm : int
  * AtualizadoEmUtc : datetime2
}

entity "NotificacaoEvento" as Notificacao {
  * Id : int <<PK>>
  --
  * AlunoId : int <<FK, UQ composto>>
  * EventoId : int <<FK, UQ composto>>
  * Tipo : nvarchar(60) <<UQ composto>>
  * Assunto : nvarchar(200)
  * Mensagem : nvarchar(max)
  * ProcessadaEmUtc : datetime2
  * Enviada : bit
  Erro : nvarchar(max)
}

Responsavel ||--o{ Evento : CASCADE
Aluno ||--o{ Participacao : CASCADE
Evento ||--o{ Participacao : CASCADE
Evento ||--o{ Certificado : CASCADE
Aluno ||--o| Preferencia : CASCADE
Aluno ||--o{ Notificacao : CASCADE
Evento ||--o{ Notificacao : CASCADE

note bottom of Participacao
  OperadorCheckInId é armazenado como valor escalar;
  o modelo atual não configura uma FK para essa coluna.
end note
@enduml

